# astra_ai_qa_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  file::memory:  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_requirement_id.py
app/: config.py  db.py  main.py
app/auth/: __init__.py  rbac.py  sso.py
app/controllers/: __init__.py  admin.py  analytics.py  defects.py  deploy.py  imports.py  metrics.py  projects.py  scheduler.py  search.py  test_cases.py  test_runs.py  test_suites.py  webhooks.py
app/models/: __init__.py  base.py  entities.py
app/repositories/: __init__.py  ai.py  base.py  test_runs.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  ai_analyzer.py  ai_workflow.py  analytics.py  backup.py  deploy.py  embeddings.py  import_service.py  jira_integration.py  jira_sync.py  notifications.py  orchestration.py  registry.py  report_generator.py  sanitizer.py  scheduler.py  search.py  storage.py  test_case_generator.py  ws_manager.py
app/tasks/: broker.py  tasks.py
app/templates/: report.html
docs/developer/: API_REFERENCE.md  ARCHITECTURE.md  README.md
docs/diplom_mvp/: 00_front_matter.md  01_introduction.md  02_chapter1.md  03_chapter2.md  04_chapter3.md  05_conclusion.md  06_references.md  07_appendix.md
tests/: conftest.py  test_admin.py  test_ai_testgen.py  test_ai_workflow.py  test_analytics.py  test_api.py  test_backup.py  test_deploy.py  test_diff.py  test_endpoints.py  test_export.py  test_import.py  test_integration_wiring.py  test_jira.py  test_jira_sync.py  test_junit_import.py  test_metrics.py  test_models.py  test_notifications.py  test_registry.py  test_report.py  test_requirements.py  test_rerun.py  test_risk.py  test_scheduler.py  test_search.py  test_services.py  test_storage.py  test_webhooks.py  test_worker.py
worker/: run_shard.py
