[project]
name = "astra-qa-backend"
version = "0.1.0"
description = "Astra AI QA Backend - Platform for automated code testing with AI LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Astra Team", email = "team@astra.ai"}
]
keywords = ["qa", "testing", "ai", "llm", "langchain", "litestar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web framework
    "litestar>=2.21.0,<3.0",

    # LangChain ecosystem
    "langchain>=1.2.0,<2.0",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.0,<2.0",
    "langchain-gigachat>=0.5.0",

    # GigaChat SDK
    "gigachat>=0.2.0",

    # Database
    "sqlalchemy>=2.0.40,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.18.0",
    "advanced-alchemy>=0.20.0",

    # Vector search
    "pgvector>=0.3",

    # Configuration
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.0",

    # Serialization (DTOs)
    "msgspec>=0.21.0",

    # Task queue
    "taskiq>=0.12.0",
    "taskiq-aio-pika>=0.4.0",
    "aio-pika>=9.6.0",

    # Redis
    "redis>=7.4.0",

    # HTTP client
    "httpx>=0.28.0",

    # JWT authentication
    "PyJWT>=2.8.0",

    # Logging
    "structlog>=25.0.0",

    # PDF generation
    "weasyprint>=62.0",
    "jinja2>=3.1",

    # MinIO storage
    "minio>=7.2",

    # OpenSearch
    "opensearch-py>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true